# Generated by Django 4.2.23 on 2025-09-01 12:59

from django.conf import settings
from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    dependencies = [
        ('compania_naviera', '0002_remove_usuariopersonalizado_metodo_pago'),
    ]

    operations = [
        migrations.CreateModel(
            name='ActividadPosible',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=100)),
                ('descripcion', models.TextField()),
            ],
        ),
        migrations.CreateModel(
            name='Camarote',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('numero_de_camarote', models.IntegerField()),
                ('imagen', models.URLField(blank=True, null=True)),
            ],
        ),
        migrations.CreateModel(
            name='Cliente',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=100)),
                ('apellido', models.CharField(max_length=100)),
                ('dni', models.CharField(max_length=20)),
                ('direccion', models.CharField(max_length=200)),
                ('fecha_nacimiento', models.DateField()),
                ('nacionalidad', models.CharField(max_length=50)),
                ('genero', models.CharField(max_length=20)),
                ('usuario', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='clientes', to=settings.AUTH_USER_MODEL)),
            ],
        ),
        migrations.CreateModel(
            name='EstadoCamarote',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=100)),
                ('descripcion', models.TextField()),
            ],
        ),
        migrations.CreateModel(
            name='EstadoPago',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=50)),
                ('descripcion', models.TextField()),
            ],
        ),
        migrations.CreateModel(
            name='EstadoPasajero',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=50)),
                ('descripcion', models.TextField()),
            ],
        ),
        migrations.CreateModel(
            name='EstadoReserva',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=50)),
                ('descripcion', models.TextField()),
            ],
        ),
        migrations.CreateModel(
            name='Itinerario',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('imagen', models.URLField(blank=True, null=True)),
            ],
        ),
        migrations.CreateModel(
            name='MetodoPago',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=100)),
                ('descripcion', models.TextField()),
            ],
        ),
        migrations.CreateModel(
            name='Navio',
            fields=[
                ('codigo_de_navio', models.AutoField(primary_key=True, serialize=False)),
                ('nombre', models.CharField(max_length=100)),
                ('altura', models.FloatField()),
                ('eslora', models.FloatField()),
                ('manga', models.FloatField()),
                ('desplazamiento', models.FloatField()),
                ('autonomia_de_viaje', models.IntegerField()),
                ('cantidad_maxima_de_pasajeros', models.IntegerField()),
                ('cantidad_de_motores', models.IntegerField()),
                ('imagen', models.URLField(blank=True, null=True)),
            ],
        ),
        migrations.CreateModel(
            name='Puerto',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=100)),
                ('orden', models.IntegerField()),
                ('itinerario', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='puertos', to='compania_naviera.itinerario')),
            ],
        ),
        migrations.CreateModel(
            name='Rol',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=100, unique=True)),
                ('descripcion', models.TextField()),
            ],
        ),
        migrations.CreateModel(
            name='TipoCamarote',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=100)),
                ('descripcion', models.TextField()),
            ],
        ),
        migrations.CreateModel(
            name='TipoItinerario',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=100)),
                ('descripcion', models.TextField()),
            ],
        ),
        migrations.CreateModel(
            name='TipoNavio',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=100)),
                ('descripcion', models.TextField()),
            ],
        ),
        migrations.CreateModel(
            name='Tripulante',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=100)),
                ('legajo', models.CharField(max_length=50)),
                ('dni', models.CharField(max_length=20)),
                ('direccion', models.CharField(max_length=200)),
                ('fecha_nacimiento', models.DateField()),
                ('nacionalidad', models.CharField(max_length=50)),
                ('genero', models.CharField(max_length=20)),
            ],
        ),
        migrations.CreateModel(
            name='Viaje',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=100)),
                ('descripcion', models.TextField()),
                ('fecha_de_salida', models.DateField()),
                ('fecha_fin', models.DateField()),
                ('hora_salida', models.TimeField()),
                ('hora_llegada', models.TimeField()),
                ('lugar_destino', models.CharField(max_length=100)),
                ('fecha_actual', models.DateField()),
                ('imagen', models.URLField(blank=True, null=True)),
            ],
        ),
        migrations.CreateModel(
            name='ViajeXNavio',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('navio', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='compania_naviera.navio')),
                ('viaje', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='compania_naviera.viaje')),
            ],
        ),
        migrations.CreateModel(
            name='UbicacionPuerto',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nro_muelle', models.IntegerField()),
                ('nombre', models.CharField(max_length=100)),
                ('puerto', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='ubicaciones', to='compania_naviera.puerto')),
            ],
        ),
        migrations.CreateModel(
            name='Reserva',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('descripcion', models.TextField()),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('cliente', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='compania_naviera.cliente')),
                ('estado_reserva', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='compania_naviera.estadoreserva')),
                ('viaje_navio', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='compania_naviera.viajexnavio')),
            ],
        ),
        migrations.CreateModel(
            name='PuertoxActividad',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('actividad', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='compania_naviera.actividadposible')),
                ('puerto', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='actividades', to='compania_naviera.puerto')),
            ],
        ),
        migrations.CreateModel(
            name='Pasajero',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=100)),
                ('apellido', models.CharField(max_length=100)),
                ('fecha_inicio', models.DateField()),
                ('fecha_fin', models.DateField()),
                ('estado_pasajero', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='compania_naviera.estadopasajero')),
                ('reserva', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='pasajeros', to='compania_naviera.reserva')),
            ],
        ),
        migrations.CreateModel(
            name='Pago',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('fecha_pago', models.DateField()),
                ('monto', models.FloatField()),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('estado_pago', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='compania_naviera.estadopago')),
                ('metodo_pago', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='compania_naviera.metodopago')),
                ('reserva', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='pagos', to='compania_naviera.reserva')),
            ],
        ),
        migrations.CreateModel(
            name='Orden',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=100)),
                ('descripcion', models.TextField()),
                ('orden', models.IntegerField()),
                ('itinerario', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='ordenes', to='compania_naviera.itinerario')),
            ],
        ),
        migrations.CreateModel(
            name='OcupacionCamarote',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('fecha_inicio', models.DateField()),
                ('fecha_fin', models.DateField()),
                ('camarote', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='compania_naviera.camarote')),
                ('pasajero', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='compania_naviera.pasajero')),
                ('tripulante', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='compania_naviera.tripulante')),
                ('viaje_navio', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='compania_naviera.viajexnavio')),
            ],
        ),
        migrations.AddField(
            model_name='navio',
            name='tipo_navio',
            field=models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='compania_naviera.tiponavio'),
        ),
        migrations.CreateModel(
            name='ItinerarioViaje',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('itinerario', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='compania_naviera.itinerario')),
                ('viaje', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='compania_naviera.viaje')),
            ],
        ),
        migrations.AddField(
            model_name='itinerario',
            name='categoria',
            field=models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='compania_naviera.tipoitinerario'),
        ),
        migrations.CreateModel(
            name='HistorialReserva',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('fecha_cambio', models.DateField()),
                ('cambio_realizado', models.TextField()),
                ('reserva', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='compania_naviera.reserva')),
            ],
        ),
        migrations.CreateModel(
            name='HistorialPago',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('fecha_cambio', models.DateField()),
                ('cambio_realizado', models.TextField()),
                ('estado_pago', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='compania_naviera.estadopago')),
                ('pago', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='compania_naviera.pago')),
                ('usuario_responsable', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to=settings.AUTH_USER_MODEL)),
            ],
        ),
        migrations.CreateModel(
            name='Cubierta',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('numero_de_cubierta', models.IntegerField()),
                ('descripcion', models.TextField()),
                ('encargado', models.CharField(max_length=100)),
                ('navio', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='cubiertas', to='compania_naviera.navio')),
            ],
        ),
        migrations.AddField(
            model_name='camarote',
            name='cubierta',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='camarotes', to='compania_naviera.cubierta'),
        ),
        migrations.AddField(
            model_name='camarote',
            name='estado_camarote',
            field=models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='compania_naviera.estadocamarote'),
        ),
        migrations.AddField(
            model_name='camarote',
            name='tipo_camarote',
            field=models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='compania_naviera.tipocamarote'),
        ),
        migrations.CreateModel(
            name='AsignacionTripulanteViaje',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('fecha_inicio', models.DateField()),
                ('fecha_fin', models.DateField()),
                ('tripulante', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='compania_naviera.tripulante')),
                ('viaje_navio', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='compania_naviera.viajexnavio')),
            ],
        ),
        migrations.AddField(
            model_name='usuariopersonalizado',
            name='rol',
            field=models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.PROTECT, related_name='usuarios', to='compania_naviera.rol'),
        ),
    ]
